# dlna-screen-cast

./: .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  DesktopDlnaCast.sln  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build-release-msix-arm64.bat  build-release-msix-x64.bat  build-release-msstore-packages.bat  build-release-nsis-arm64.bat  build-release-nsis-x64.bat  global.json
.github/workflows/: build.yml
docs/: architecture.md  compatibility.md  native-build.md  packaging-msix.md  protocol-notes.md  troubleshooting.md
packaging/msix/: AppxManifest.template.xml
packaging/nsis/: DesktopDlnaCast.nsi
packaging/scripts/: build-msix-arm64.ps1  build-msix-x64.ps1  build-msix.ps1  build-nsis-arm64.ps1  build-nsis-x64.ps1  build-nsis.ps1
src/DesktopDlnaCast.App/: App.xaml  App.xaml.cs  DesktopDlnaCast.App.csproj  DisplayPickerTemplateSelector.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest  appsettings.json
src/DesktopDlnaCast.Core/: DesktopDlnaCast.Core.csproj
src/DesktopDlnaCast.Media.Interop/: DesktopDlnaCast.Media.Interop.csproj  NativeAbi.cs  NativeMediaCaptureSession.cs  NativeMediaCaptureSessionFactory.cs  NativeMediaException.cs  WindowsDisplayCaptureSourceProvider.cs  WindowsDisplayPreviewProvider.cs
src/DesktopDlnaCast.Media.Native/: CMakeLists.txt  README.md  vcpkg.json
src/DesktopDlnaCast.Media.Native/include/: ddc_media.h
src/DesktopDlnaCast.Media.Native/src/: adts_stream_writer.cpp  adts_stream_writer.h  bounded_packet_queue.cpp  bounded_packet_queue.h  d3d11_video_processor.cpp  d3d11_video_processor.h  ddc_api.cpp  graphics_capture_source.cpp  graphics_capture_source.h  media_foundation_aac_encoder.cpp  media_foundation_aac_encoder.h  media_foundation_h264_encoder.cpp  media_foundation_h264_encoder.h  media_foundation_mp3_encoder.cpp  media_foundation_mp3_encoder.h  media_session.cpp  media_session.h  mpeg_ts_muxer.cpp  mpeg_ts_muxer.h  software_video_processor.cpp  software_video_processor.h  wasapi_loopback_capture.cpp  wasapi_loopback_capture.h
src/DesktopDlnaCast.Media.Native/tests/: bounded_packet_queue_tests.cpp  d3d11_video_processor_tests.cpp  media_foundation_aac_encoder_tests.cpp  media_foundation_h264_encoder_tests.cpp  mpeg_ts_muxer_tests.cpp  native_api_tests.cpp  software_video_processor_tests.cpp  test_assert.h
src/DesktopDlnaCast.Streaming/: DesktopDlnaCast.Streaming.csproj
src/DesktopDlnaCast.Upnp/: DesktopDlnaCast.Upnp.csproj
tests/DesktopDlnaCast.Core.Tests/: DesktopDlnaCast.Core.Tests.csproj
tests/DesktopDlnaCast.IntegrationTests/: DesktopDlnaCast.IntegrationTests.csproj
tests/DesktopDlnaCast.Media.Interop.Tests/: DesktopDlnaCast.Media.Interop.Tests.csproj  WindowsDisplayCaptureSourceProviderTests.cs  WindowsDisplayPreviewProviderTests.cs
tests/DesktopDlnaCast.Streaming.Tests/: DesktopDlnaCast.Streaming.Tests.csproj
tests/DesktopDlnaCast.Upnp.Tests/: DesktopDlnaCast.Upnp.Tests.csproj  TestHttpMessageHandler.cs
tools/: GenerateLocalizedScreenshots.ps1
tools/MockRenderer/: DesktopDlnaCast.MockRenderer.csproj  MockRendererHost.cs  MockRendererOptions.cs  Program.cs  README.md
tools/NativeCaptureProbe/: DesktopDlnaCast.NativeCaptureProbe.csproj  Program.cs  README.md
tools/NativeCastProbe/: DesktopDlnaCast.NativeCastProbe.csproj  Program.cs  README.md
tools/StreamProbe/: DesktopDlnaCast.StreamProbe.csproj  Program.cs  README.md  StreamProbeEngine.cs  StreamProbeResult.cs
(+156 files in other folders)
